--- a/lab08/index.html
+++ b/lab08/index.html
@@ -92,7 +92,7 @@
 						<td>20mg</td>
 					</tr>
 				</table>
-			<aside>
+			</aside>
 		</section>
 		<footer>
 			<hr>
@@ -107,9 +107,8 @@
 			<br>
 			<label for="emailaddress">Email Address:</label>
 			<input type="text" name="emailaddress" id="emailaddress">
-			<br>
 			<label for="favoritecusinequestion">Select your favorite cusine!</label>
-			<select size="1" name="favoritecusine" id="favoritecusine">
+			<select size="1" name="favoritecusinequestion" id="favoritecusinequestion">
 				<option value="Selectfavcusine">Select here!</option>
 				<option value="jamaican">Jamaican</option>
 				<option value="mexican">Mexican</option>
@@ -121,10 +120,10 @@
 				<option value="other">Other</option>
 			</select>
 			<br>
-			<label for="mailinglistquestion">Do you want to subscribe to our mailing list?</label>
+			<label for="yes">Do you want to subscribe to our mailing list?</label>
 			<br>
-			<input type="radio" name="yes" id="yes" value="yes">Yes<br>
-			<input type="radio" name="no" id="no" value="no">No<br>
+			<input type="radio" name="mailinglistquestion" id="yes" value="yes">Yes<br>
+			<input type="radio" name="mailinglistquestion" id="no" value="no">No<br>
 			<input type="submit">
 			<input type="reset">
 		</form>
